2005-08-31  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-file-name-handler-alist)
	(tramp-file-name-for-operation): Add `make-auto-save-file-name'.
	(tramp-handle-make-auto-save-file-name): Rename from
	`tramp-make-auto-save-file-name'.
	(tramp-exists-file-name-handler): New defun.
	(tramp-advice-make-auto-save-file-name): Make defadvice only when
	`make-auto-save-file-name' is not a magic file name operation.

2005-08-25  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-password-prompt-regexp): There might be other
	words before trailing ":".  Reported by Kurt Steinkraus
	<kurt@steinkraus.us>.
	(tramp-chunksize): Improve docstring.
	(tramp-set-auto-save-file-modes): Octal integer code #o600 breaks
	Emacs 20.  Use `tramp-octal-to-decimal' therefore.  Reported by
	Christian Joergensen <bugs@razor.dk>.

2005-08-23  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-chunksize): Improve docstring.

2005-08-07  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.0.50 released.

	* tramp.el: Remove defvar of `last-coding-system-used' in the
	XEmacs case; not necessary anymore.
	(tramp-handle-set-visited-file-modtime)
	(tramp-handle-insert-file-contents)
	(tramp-handle-write-region): No special handling for
	`last-coding-system-used, because this is done in
	`tramp-accept-process-output' now.
	(tramp-accept-process-output): New defun.
	(tramp-process-one-action, tramp-process-one-multi-action)
	(tramp-wait-for-regexp, tramp-wait-for-output)
	(tramp-discard-garbage-erase-buffer): Call it.  Reported by David
	Howells <dhowells@redhat.com>.
	(clear-visited-file-modtime): Defadvice removed.  The check for
	unset buffer's modtime does not need to be based on
	`tramp-buffer-file-attributes'.  Suggested by RMS.

	* tramp-smb.el: Remove defvar of `last-coding-system-used' in the
	XEmacs case; not necessary anymore.
	(tramp-smb-handle-write-region): No special handling for
	`last-coding-system-used, because this is done in